  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt

+ KGySoft.Drawing.SkiaSharp namespace
=====================================
+ SKImageInfoExtensions, SKBitmapExtensions, SKPixmapExtensions, SKImageExtensions, SKSurfaceExtensions classes:
  + Supporting the new Bgr101010xXR color type.
  + Supporting the new Srgba8888 color type.


~~~~~~~~~
* v8.1.0:
~~~~~~~~~

* Assembly changes
==================
* Referencing KGySoft.Drawing.Core v8.1.0, which mainly improves performance.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt
* Upgrading SkiaSharp package to 2.88.7.


~~~~~~~~~
! v8.0.0:
~~~~~~~~~

! Assembly changes
==================
! Upgrading SkiaSharp package from 2.88.3 to 2.88.6. This is required due to a SkiaSharp vulnerability between
  versions 2.0.0 to 2.88.5: https://security.snyk.io/vuln/SNYK-DOTNET-SKIASHARP-5922114. Marked as a breaking change
  because version 2.88.6 contains several new bugs, including some encoder issues, which cause previously correctly
  saved images to get corrupted: https://github.com/mono/SkiaSharp/issues?q=label%3Atype%2Fbug+2.88.6+

! KGySoft.Drawing.SkiaSharp namespace
=====================================
! SKImageInfoExtensions class:
  ! GetInfo method: The new Prefers128BitColors or Prefers64BitColors property is now set for some pixel formats.
+ ColorExtensions class:
  + New conversion methods also for SKColorF and SKPMColor types.
  + New ToPColor32, ToColor64, ToPColor64, ToColorF and ToPColorF conversion methods for SkiaSharp color types.
+ SKBitmapExtensions class:
  + GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods:
    + They support getting/setting pixels using wide colors without quantizing the color information to the 32-bit
      ARGB color space.
+ SKPixmapExtensions class:
  + GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods: